manifests/trident/netpol-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trident-controller
  namespace: trident
spec:
  endpointSelector:
    matchLabels:
      app: controller.csi.trident.qnap.io
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toCIDR:
        - 192.168.5.240/32
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
