manifests/trident/netpol-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trident-operator
  namespace: trident
spec:
  endpointSelector:
    matchLabels:
      app: operator.trident.qnap.io
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
